travis test commit / 6

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ after_success:
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
   - git config --global user.name "Travis CI"
+  - git pull origin master
   - git checkout master
   - git merge --no-ff develop
   - git push origin master
