travis test commit / 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: node_js
 node_js:
 - '6.11.2'
 
-branches:
-  only:
-    develop
+git:
+  depth: false
 
 install:
   - npm install -g node-sass
