--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: node_js
 node_js:
 - '6.11.2'
 
-git:
-  depth: false
+branches:
+  only:
+    develop
 
 install:
+  - git clone https://github.com/wcosaka2018/wcosaka2018-theme.git
   - npm install -g node-sass
 
 before_script:
@@ -15,7 +17,7 @@ script:
   - npm run sass
 
 after_success:
-  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out sample_key -d > ~/.ssh/id_rsa
+  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d -d
   - chmod 600 ~/.ssh/id_rsa
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
