--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ script:
   - npm run sass
 
 after_success:
-  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d -d
+  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
   - git config --global user.name "Travis CI"
-  - git checkout -b master origin/master
+  - git checkout master
   - git merge --no-ff develop
   - git push origin master
