--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ branches:
     develop
 
 install:
+  - cd ../../
   - git clone https://github.com/wcosaka2018/wcosaka2018-theme.git
+  - cd wcosaka2018/wc0saka2018-theme.git
   - npm install -g node-sass
 
 before_script:
