--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ after_success:
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
   - git config --global user.name "Travis CI"
-  - git checkout master
+  - git checkout -b master origin/master
   - git merge --no-ff develop
   - git push origin master
