travis test commit / 19

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ branches:
     develop
 
 install:
-  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
-  - chmod 600 ~/.ssh/id_rsa
-  - git pull --all
+  - cd ../../
+  - rm -rf wcosaka2018
+  - git clone https://github.com/wcosaka2018/wcosaka2018-theme.git
+  - cd wcosaka2018/wcosaka2018-theme
+  - git branch
   - npm install -g node-sass
 
 before_script:
@@ -19,9 +21,11 @@ script:
   - npm run sass
 
 after_success:
+  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
+  - chmod 600 ~/.ssh/id_rsa
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
   - git config --global user.name "Travis CI"
-  - git checkout master
+  - git checkout -b master origin/master
   - git merge --no-ff develop
   - git push origin master
