--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,11 @@ after_success:
   - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - echo -e "\n\tUser git"                   >> ~/.ssh/config
+  - echo -e "\n\tStrictHostKeyChecking no"   >> ~/.ssh/config
+  - echo -e "\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+  - echo -e "\n\tIdentitiesOnly yes"         >> ~/.ssh/config
+  - echo -e "\n\tForwardAgent yes"           >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
   - git config --global user.name "Travis CI"
   - git checkout -b master origin/master
