--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
 after_success:
   - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
-  - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - echo -e "Host github.com"                >> ~/.ssh/config
   - echo -e "\n\tUser git"                   >> ~/.ssh/config
   - echo -e "\n\tStrictHostKeyChecking no"   >> ~/.ssh/config
   - echo -e "\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
