travis test commit / 29

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - npm run sass
 
 after_success:
-  - openssl aes-256-cbc -K $encrypted_d256d7c8628c_key -iv $encrypted_d256d7c8628c_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
+  - openssl aes-256-cbc -K $encrypted_df069a52c6e6_key -iv $encrypted_df069a52c6e6_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
   - echo -e "Host github.com"                >> ~/.ssh/config
   - echo -e "\n\tUser git"                   >> ~/.ssh/config
@@ -30,7 +30,7 @@ after_success:
   - echo -e "\n\tIdentitiesOnly yes"         >> ~/.ssh/config
   - echo -e "\n\tForwardAgent yes"           >> ~/.ssh/config
   - git config --global user.email "osaka@wordcamp.org"
-  - git config --global user.name "vagrant@2018"
+  - git config --global user.name "Travis CI"
   - git checkout -b master origin/master
   - git merge --no-ff develop
   - git push origin master
