--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success:
   - openssl aes-256-cbc -K $encrypted_df069a52c6e6_key -iv $encrypted_df069a52c6e6_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
   - echo -e "Host github.com"                >> ~/.ssh/config
-  - echo -e "\n\tUser git"                   >> ~/.ssh/config
+  - echo -e "\n\tUser sasagar"               >> ~/.ssh/config
   - echo -e "\n\tStrictHostKeyChecking no"   >> ~/.ssh/config
   - echo -e "\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
   - echo -e "\n\tIdentitiesOnly yes"         >> ~/.ssh/config
