--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,16 @@ branches:
     develop
 
 install:
+  - openssl aes-256-cbc -K $encrypted_df069a52c6e6_key -iv $encrypted_df069a52c6e6_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
+  - chmod 600 ~/.ssh/id_rsa
+  - echo -e "Host github.com"                >> ~/.ssh/config
+  - echo -e "\n\tStrictHostKeyChecking no"   >> ~/.ssh/config
+  - echo -e "\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+  - git config --global user.email "osaka@wordcamp.org"
+  - git config --global user.name "Travis CI"
   - cd ../../
   - rm -rf wcosaka2018
-  - git clone https://github.com/wcosaka2018/wcosaka2018-theme.git
+  - git glone git@github.com:wcosaka2018/wcosaka2018-theme.git
   - cd wcosaka2018-theme
   - git branch
   - npm install -g node-sass
@@ -21,13 +28,6 @@ script:
   - npm run sass
 
 after_success:
-  - openssl aes-256-cbc -K $encrypted_df069a52c6e6_key -iv $encrypted_df069a52c6e6_iv -in sample_key.enc -out ~/.ssh/id_rsa -d
-  - chmod 600 ~/.ssh/id_rsa
-  - echo -e "Host github.com"                >> ~/.ssh/config
-  - echo -e "\n\tStrictHostKeyChecking no"   >> ~/.ssh/config
-  - echo -e "\n\tIdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
-  - git config --global user.email "osaka@wordcamp.org"
-  - git config --global user.name "Travis CI"
   - git checkout -b master origin/master
   - git merge --no-ff develop
   - git push origin master
