travis test commit / 33

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - git config --global user.name "Travis CI"
   - cd ../../
   - rm -rf wcosaka2018
-  - git glone git@github.com:wcosaka2018/wcosaka2018-theme.git
+  - git clone git@github.com:wcosaka2018/wcosaka2018-theme.git
   - cd wcosaka2018-theme
   - git branch
   - npm install -g node-sass
