--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,16 @@ install:
   - rm -rf wcosaka2018
   - git clone git@github.com:wcosaka2018/wcosaka2018-theme.git
   - cd wcosaka2018-theme
-  - git branch
   - npm install -g node-sass
 
 before_script:
-  - git checkout develop
+  - git checkout master
+  - get merge --no-ff develop
 
 script:
   - npm run sass
 
 after_success:
-  - git checkout -b master origin/master
-  - git merge --no-ff develop
+  - git add *
+  - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
   - git push origin master
