travis test commit / 37

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ script:
   - npm run sass
 
 after_success:
-  - git add *
+  - git add --all
   - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
   - git push origin master
