travis test commit / 38

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ script:
   - npm run sass
 
 after_success:
+  - ls -a
+  - rm sample_key.enc
   - git add --all
   - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
   - git push origin master
