--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
   - npm run sass
 
 after_success:
-  - ls -a
+  - ls -a css/
   - rm sample_key.enc
   - git add --all
   - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
