--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,12 @@ install:
 before_script:
   - git checkout master
   - git merge --no-ff develop
-  - mkdir css
 
 script:
   - npm run sass
 
 after_success:
   - ls -a css/
-  - rm sample_key.enc
-  - git add --all
+  - git add css/*
   - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
   - git push origin master
