--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ script:
 
 after_success:
   - ls -a css/
-  - git add css/*
+  - git add -f css/*
   - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
   - git push origin master
