travis test commit / 42

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,5 @@ script:
 after_success:
   - ls -a css/
   - git add -f css/*
-  - git commit -m 'by Travis CI (JOB $TRAVIS_JOB_NUMBER)'
+  - git commit -m "by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
   - git push origin master
