update: package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "sass": "node-sass ./sass/* -o ./css/ --output-style expanded"
+    "sass":
+      "node-sass ./scss/wcosaka2018.scss -o ./docs/css/wcosaka2018.css --output-style expanded"
   },
   "repository": {
     "type": "git",
