--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,6 @@ script:
   - npm run sass
 
 after_success:
+  - rm .travis.yml
   - git commit -m "by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
   - git push origin master
