--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,6 @@ script:
 
 after_success:
   - rm .travis.yml
+  - rm -rf ./css
   - git commit -m "by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
   - git push origin master
