--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,6 @@ script:
 after_success:
   - rm .travis.yml
   - rm -rf ./css
+  - git add --all
   - git commit -m "by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
   - git push origin master
