--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,13 @@ install:
 
 before_script:
   - git checkout master
-  - git merge --no-ff develop
+  - git reset --hard develop
 
 script:
   - npm run sass
 
 after_success:
   - git add ./docs/css/*
+  - git add --all
   - git commit -m "by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
   - git push origin master
