--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ install:
   - npm install -g node-sass
 
 before_script:
+  - git checkout develop
+  - rm .travis.yml
   - git checkout master
   - git merge --no-ff develop
 
@@ -28,7 +30,6 @@ script:
   - npm run sass
 
 after_success:
-  - rm .travis.yml
   - git add ./docs/css/*
   - git add --all
   - git commit -m "by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
