--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
 before_script:
   - git checkout develop
   - rm .travis.yml
+  - git commit -m "Commit before Test (JOB $TRAVIS_JOB_NUMBER)"
   - git checkout master
   - git merge --no-ff develop
 
